Added release plugins

--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
                 <artifactId>maven-release-plugin</artifactId>
                 <version>${maven-release-plugin.version}</version>
                 <configuration>
-                    <tagNameFormat>crypto-trader-${project.version}</tagNameFormat>
+                    <tagNameFormat>core-${project.version}</tagNameFormat>
                 </configuration>
             </plugin>
         </plugins>
