--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,24 +1,37 @@
 name: Java CI
 
-on: [ push ]
+on:
+  push:
+    branches:
+      - main
 
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-java@v2
+      # 1. Checkout source
+      - uses: actions/checkout@v3
+
+      # 2. Set up Java 21
+      - uses: actions/setup-java@v3
         with:
           java-version: '21'
-          distribution: 'adopt'
+          distribution: 'temurin'   # "adopt" moved to "temurin"
+
+      # 3. Build and run tests
       - name: Build with tests
         run: mvn --batch-mode --update-snapshots verify
-      - uses: actions/checkout@v2
-      - name: Release prepare
+
+      # 4. Configure Git for release
+      - name: Configure Git user
         run: |
           git config --global user.email "${{ secrets.USER_EMAIL }}"
           git config --global user.name "${{ secrets.USER_NAME }}"
-          mvn -B release:prepare
+
+      # 5. Prepare Maven release
+      - name: Release prepare
+        run: mvn -B release:prepare
+
+      # 6. Perform Maven release
       - name: Release perform
-        run: |
-          mvn release:perform -Darguments="-Dmaven.deploy.skip=true"
+        run: mvn release:perform -Darguments="-Dmaven.deploy.skip=true"
