--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>com.pp.core</groupId>
     <artifactId>core</artifactId>
-    <version>0.1.4</version>
+    <version>0.1.5-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>core</name>
     <description>Core for spring boot projects</description>
@@ -161,6 +161,6 @@
     </build>
     <scm>
         <developerConnection>scm:git:https://github.com/peterpivarnik/core</developerConnection>
-        <tag>core-0.1.4-SNAPSHOT</tag>
+        <tag>HEAD</tag>
     </scm>
 </project>
