--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,7 +24,10 @@ jobs:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
-          echo "$GPG_PRIVATE_KEY" | gpg --batch --import
+          # Decode the base64 key and import
+          echo "$GPG_PRIVATE_KEY" | base64 -d | gpg --batch --import
+
+          # List imported keys to verify
           gpg --list-secret-keys
 
       # 4. Build and run tests
