--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -18,17 +18,28 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
 
-      # 3. Import GPG key
-      - name: Import GPG key
+      # 3. Prepare GPG
+      - name: Import GPG key and configure
         env:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
-          # Decode the base64 key and import
-          echo "$GPG_PRIVATE_KEY" | base64 -d | gpg --batch --import
+          # Install pinentry
+          sudo apt-get update
+          sudo apt-get install -y gnupg2
 
-          # List imported keys to verify
+          # Create GPG config
+          mkdir -p ~/.gnupg
+          echo "use-agent" >> ~/.gnupg/gpg.conf
+          echo "pinentry-mode loopback" >> ~/.gnupg/gpg.conf
+
+          # Import GPG key
+          echo "$GPG_PRIVATE_KEY" | base64 -d | gpg --batch --import
+          
+          # List and trust the key
           gpg --list-secret-keys
+          gpg_key=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
+          echo -e "5\ny\n" | gpg --command-fd 0 --expert --edit-key $gpg_key trust
 
       # 4. Build and run tests
       - name: Build with tests
@@ -40,11 +51,18 @@ jobs:
           git config --global user.email "${{ secrets.USER_EMAIL }}"
           git config --global user.name "${{ secrets.USER_NAME }}"
 
-      # 6. Prepare Maven release
+      # 6. Prepare Maven release (removes SNAPSHOT)
       - name: Release prepare
-        run: mvn -B release:prepare
+        env:
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          mvn -B release:prepare \
+            -Darguments="-Dgpg.passphrase=$GPG_PASSPHRASE \
+                         -Dgpg.keyname=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2) \
+                         -Dgpg.pinentry-mode=loopback"
 
-      # 7. Deploy to Sonatype
+      # 7. Deploy release version to Sonatype
       - name: Deploy to Sonatype
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
@@ -58,7 +76,14 @@ jobs:
             -Dsonatype.password=$SONATYPE_PASSWORD \
             -Dgpg.passphrase=$GPG_PASSPHRASE
 
-
-      # 7. Perform Maven release
+      # 8. Perform Maven release (increases to next SNAPSHOT)
       - name: Release perform
-        run: mvn release:perform -Darguments="-Dmaven.deploy.skip=true"
+        env:
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          mvn release:perform \
+            -Darguments="-Dgpg.passphrase=$GPG_PASSPHRASE \
+                         -Dgpg.keyname=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2) \
+                         -Dgpg.pinentry-mode=loopback \
+                         -Dmaven.deploy.skip=true"
