--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,22 +24,31 @@ jobs:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
-          # Install pinentry
-          sudo apt-get update
-          sudo apt-get install -y gnupg2
-
-          # Create GPG config
+          # Ensure correct GPG directory permissions
           mkdir -p ~/.gnupg
+          chmod 700 ~/.gnupg
+          
+          # Configure GPG
           echo "use-agent" >> ~/.gnupg/gpg.conf
           echo "pinentry-mode loopback" >> ~/.gnupg/gpg.conf
-
-          # Import GPG key
+          
+          # Import GPG key with batch mode
           echo "$GPG_PRIVATE_KEY" | base64 -d | gpg --batch --import
           
-          # List and trust the key
+          # List secret keys
           gpg --list-secret-keys
-          gpg_key=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
-          echo -e "5\ny\n" | gpg --command-fd 0 --expert --edit-key $gpg_key trust
+          
+          # Find the key ID
+          GPG_KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
+          
+          # Trust the key
+          echo -e "trust\n5\ny\n" | gpg --command-fd 0 --expert --edit-key "$GPG_KEY_ID"
+          
+          # Ensure correct file permissions
+          chmod 600 ~/.gnupg/*
+          
+          # Export the public key
+          gpg --armor --export "$GPG_KEY_ID" > public-key.asc
 
       # 4. Build and run tests
       - name: Build with tests
@@ -57,9 +66,12 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          # Find the key ID again
+          GPG_KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
+          
           mvn -B release:prepare \
             -Darguments="-Dgpg.passphrase=$GPG_PASSPHRASE \
-                         -Dgpg.keyname=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2) \
+                         -Dgpg.keyname=$GPG_KEY_ID \
                          -Dgpg.pinentry-mode=loopback"
 
       # 7. Deploy release version to Sonatype
@@ -69,12 +81,16 @@ jobs:
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
+          # Find the key ID again
+          GPG_KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
+          
           mvn deploy -Dmaven.deploy.skip=false \
             -DskipTests \
             -Possrh \
             -Dsonatype.username=$SONATYPE_USERNAME \
             -Dsonatype.password=$SONATYPE_PASSWORD \
-            -Dgpg.passphrase=$GPG_PASSPHRASE
+            -Dgpg.passphrase=$GPG_PASSPHRASE \
+            -Dgpg.keyname=$GPG_KEY_ID
 
       # 8. Perform Maven release (increases to next SNAPSHOT)
       - name: Release perform
@@ -82,8 +98,11 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          # Find the key ID again
+          GPG_KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
+          
           mvn release:perform \
             -Darguments="-Dgpg.passphrase=$GPG_PASSPHRASE \
-                         -Dgpg.keyname=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2) \
+                         -Dgpg.keyname=$GPG_KEY_ID \
                          -Dgpg.pinentry-mode=loopback \
                          -Dmaven.deploy.skip=true"
