--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -32,33 +32,31 @@ jobs:
           echo "use-agent" >> ~/.gnupg/gpg.conf
           echo "pinentry-mode loopback" >> ~/.gnupg/gpg.conf
           
-          # Import GPG key with batch mode
-          echo "$GPG_PRIVATE_KEY" | base64 -d | gpg --batch --import
+          # Import GPG key with verbose output
+          echo "$GPG_PRIVATE_KEY" | base64 -d | gpg --batch --import --verbose
           
-          # List secret keys
-          gpg --list-secret-keys
+          # Detailed key listing
+          gpg --list-secret-keys --keyid-format=LONG
           
-          # Find the key ID
-          GPG_KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
+          # Extract full key details
+          GPG_KEY_FULL=$(gpg --list-secret-keys --keyid-format=LONG | grep pub | tr -s ' ')
+          echo "Full key details: $GPG_KEY_FULL"
           
-          # Trust the key
-          echo -e "trust\n5\ny\n" | gpg --command-fd 0 --expert --edit-key "$GPG_KEY_ID"
+          # Extract key ID more robustly
+          GPG_KEY_ID=$(echo "$GPG_KEY_FULL" | awk '{print $2}' | cut -d/ -f2)
+          echo "Extracted Key ID: $GPG_KEY_ID"
           
-          # Ensure correct file permissions
-          chmod 600 ~/.gnupg/*
+          # Verify key ID is not empty
+          if [ -z "$GPG_KEY_ID" ]; then
+            echo "Error: Could not extract GPG key ID"
+            exit 1
+          fi
           
           # Export the public key
           gpg --armor --export "$GPG_KEY_ID" > public-key.asc
-
-      # 4. Build and run tests
-      - name: Build with tests
-        run: mvn --batch-mode --update-snapshots verify
-
-      # 5. Configure Git for release
-      - name: Configure Git user
-        run: |
-          git config --global user.email "${{ secrets.USER_EMAIL }}"
-          git config --global user.name "${{ secrets.USER_NAME }}"
+          
+          # Ensure correct file permissions
+          chmod 600 ~/.gnupg/*
 
       # 6. Prepare Maven release (removes SNAPSHOT)
       - name: Release prepare
@@ -66,8 +64,18 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Find the key ID again
-          GPG_KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
+          # Robust key ID extraction
+          GPG_KEY_FULL=$(gpg --list-secret-keys --keyid-format=LONG | grep pub | tr -s ' ')
+          GPG_KEY_ID=$(echo "$GPG_KEY_FULL" | awk '{print $2}' | cut -d/ -f2)
+          
+          # Verify key ID
+          if [ -z "$GPG_KEY_ID" ]; then
+            echo "Error: Could not extract GPG key ID"
+            exit 1
+          fi
+          
+          # Print key ID for debugging
+          echo "Using GPG Key ID: $GPG_KEY_ID"
           
           mvn -B release:prepare \
             -Darguments="-Dgpg.passphrase=$GPG_PASSPHRASE \
@@ -81,8 +89,18 @@ jobs:
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
-          # Find the key ID again
-          GPG_KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
+          # Robust key ID extraction
+          GPG_KEY_FULL=$(gpg --list-secret-keys --keyid-format=LONG | grep pub | tr -s ' ')
+          GPG_KEY_ID=$(echo "$GPG_KEY_FULL" | awk '{print $2}' | cut -d/ -f2)
+          
+          # Verify key ID
+          if [ -z "$GPG_KEY_ID" ]; then
+            echo "Error: Could not extract GPG key ID"
+            exit 1
+          fi
+          
+          # Print key ID for debugging
+          echo "Using GPG Key ID: $GPG_KEY_ID"
           
           mvn deploy -Dmaven.deploy.skip=false \
             -DskipTests \
@@ -98,8 +116,18 @@ jobs:
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          # Find the key ID again
-          GPG_KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
+          # Robust key ID extraction
+          GPG_KEY_FULL=$(gpg --list-secret-keys --keyid-format=LONG | grep pub | tr -s ' ')
+          GPG_KEY_ID=$(echo "$GPG_KEY_FULL" | awk '{print $2}' | cut -d/ -f2)
+          
+          # Verify key ID
+          if [ -z "$GPG_KEY_ID" ]; then
+            echo "Error: Could not extract GPG key ID"
+            exit 1
+          fi
+          
+          # Print key ID for debugging
+          echo "Using GPG Key ID: $GPG_KEY_ID"
           
           mvn release:perform \
             -Darguments="-Dgpg.passphrase=$GPG_PASSPHRASE \
