--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>io.github.peterpivarnik</groupId>
     <artifactId>core</artifactId>
-    <version>0.1.6-SNAPSHOT</version>
+    <version>0.1.6</version>
     <packaging>jar</packaging>
     <name>core</name>
     <description>Core for spring boot projects</description>
@@ -235,7 +235,7 @@
         <connection>scm:git:git://github.com/peterpivarnik/core.git</connection>
         <developerConnection>scm:git:https://github.com/peterpivarnik/core.git</developerConnection>
         <url>https://github.com/peterpivarnik/core</url>
-        <tag>HEAD</tag>
+        <tag>core-0.1.6-SNAPSHOT</tag>
     </scm>
     <developers>
         <developer>
