--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -24,16 +24,44 @@ jobs:
           GPG_PRIVATE_KEY: ${{ secrets.GPG_PRIVATE_KEY }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
+          # Ensure correct GPG directory permissions
           mkdir -p ~/.gnupg
           chmod 700 ~/.gnupg
+          
+          # Configure GPG for batch mode and loopback pinentry
           echo "use-agent" >> ~/.gnupg/gpg.conf
           echo "pinentry-mode loopback" >> ~/.gnupg/gpg.conf
+          
+          # Decode and import the key
           echo "$GPG_PRIVATE_KEY" | base64 -d | gpg --batch --import
+          
+          # List imported keys
           gpg --list-secret-keys
+
+          # Find the key ID
+          KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
 
       # 4. Build and run tests
       - name: Build with tests
-        run: mvn --batch-mode --update-snapshots verify
+        env:
+          GPG_TTY: $(tty)
+        run: |
+          mkdir -p ~/.m2
+          cat > ~/.m2/settings.xml << EOF
+          <settings>
+            <servers>
+              <server>
+                <id>gpg.passphrase</id>
+                <passphrase>${{ secrets.GPG_PASSPHRASE }}</passphrase>
+              </server>
+            </servers>
+          </settings>
+          EOF
+          
+          mvn --batch-mode --update-snapshots verify \
+            -Dgpg.executable=gpg \
+            -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} \
+            -Dgpg.pinentry-mode=loopback
 
       # 5. Configure Git for release
       - name: Configure Git user
@@ -43,21 +71,34 @@ jobs:
 
       # 6. Prepare Maven release
       - name: Release prepare
-        run: mvn -B release:prepare
+        env:
+          GPG_TTY: $(tty)
+        run: |
+          mvn -B release:prepare \
+            -Dgpg.executable=gpg \
+            -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} \
+            -Dgpg.pinentry-mode=loopback
 
-      # 7. Publish to Central
-      - name: Publish to Central
+      # 7. Deploy to Sonatype
+      - name: Deploy to Sonatype
         env:
           SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
           SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
           GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GPG_TTY: $(tty)
         run: |
+          # Create Maven settings.xml with Sonatype credentials
           mkdir -p ~/.m2
           cat > ~/.m2/settings.xml << EOF
           <settings>
             <servers>
               <server>
-                <id>central</id>
+             <id>central</id>
+             <username>${SONATYPE_USERNAME}</username>
+             <password>${SONATYPE_PASSWORD}</password>
+           </server>
+           <server>
+             <id>central-s01</id>
                 <username>${SONATYPE_USERNAME}</username>
                 <password>${SONATYPE_PASSWORD}</password>
               </server>
@@ -65,9 +106,22 @@ jobs:
           </settings>
           EOF
 
-          mvn central:publish \
-            -Dgpg.passphrase=$GPG_PASSPHRASE
+          # Deploy to Sonatype
+          mvn deploy -Dmaven.deploy.skip=false \
+          -DskipTests \
+          -Dsonatype.username=$SONATYPE_USERNAME \
+          -Dsonatype.password=$SONATYPE_PASSWORD \
+          -Dgpg.passphrase=$GPG_PASSPHRASE \
+          -Dgpg.executable=gpg \
+          -Dgpg.pinentry-mode=loopback
 
       # 8. Perform Maven release
       - name: Release perform
-        run: mvn release:perform -Darguments="-Dmaven.deploy.skip=true"
+        env:
+          GPG_TTY: $(tty)
+        run: |
+          mvn release:perform \
+            -Darguments="-Dmaven.deploy.skip=true \
+                         -Dgpg.executable=gpg \
+                         -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} \
+                         -Dgpg.pinentry-mode=loopback"
