--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>3.5.6-SNAPSHOT</version>
+        <version>3.5.5</version>
         <relativePath />
     </parent>
     <groupId>io.github.peterpivarnik</groupId>
