--- a/pom.xml
+++ b/pom.xml
@@ -222,7 +222,9 @@
                 <configuration>
                     <publishingServerId>central</publishingServerId>
                     <tokenAuth>true</tokenAuth>
+                    <requires-signature>true</requires-signature>
                 </configuration>
+
             </plugin>
         </plugins>
     </build>
