--- a/pom.xml
+++ b/pom.xml
@@ -243,8 +243,14 @@
     <distributionManagement>
         <repository>
             <id>central</id>
+            <name>Central Repository OSSRH</name>
             <url>https://central.sonatype.com/api/v1/publisher</url>
         </repository>
+        <snapshotRepository>
+            <id>central-snapshots</id>
+            <name>Central Snapshots Repository</name>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
     </distributionManagement>
     <licenses>
         <license>
