New deploy process

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,6 +17,11 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
+          server-id: central
+          server-username: MAVEN_USERNAME
+          server-password: MAVEN_PASSWORD
+          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
+          gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
       # 3. Import GPG key
       - name: Import GPG key
@@ -38,30 +43,9 @@ jobs:
           # List imported keys
           gpg --list-secret-keys
 
-          # Find the key ID
-          KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
-
       # 4. Build and run tests
       - name: Build with tests
-        env:
-          GPG_TTY: $(tty)
-        run: |
-          mkdir -p ~/.m2
-          cat > ~/.m2/settings.xml << EOF
-          <settings>
-            <servers>
-              <server>
-                <id>gpg.passphrase</id>
-                <passphrase>${{ secrets.GPG_PASSPHRASE }}</passphrase>
-              </server>
-            </servers>
-          </settings>
-          EOF
-          
-          mvn --batch-mode --update-snapshots verify \
-            -Dgpg.executable=gpg \
-            -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} \
-            -Dgpg.pinentry-mode=loopback
+        run: mvn clean verify
 
       # 5. Configure Git for release
       - name: Configure Git user
@@ -71,21 +55,14 @@ jobs:
 
       # 6. Prepare Maven release
       - name: Release prepare
-        env:
-          GPG_TTY: $(tty)
-        run: |
-          mvn -B release:prepare \
-            -Dgpg.executable=gpg \
-            -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} \
-            -Dgpg.pinentry-mode=loopback
+        run: mvn -B release:prepare
 
-      # 7. Deploy to Sonatype
-      - name: Deploy to Sonatype
+      # 7. Publish to Central
+      - name: Publish to Central
         env:
-          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
-          GPG_TTY: $(tty)
+          MAVEN_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          MAVEN_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
         run: |
           # Create Maven settings.xml with Sonatype credentials
           mkdir -p ~/.m2
@@ -93,35 +70,17 @@ jobs:
           <settings>
             <servers>
               <server>
-             <id>central</id>
-             <username>${SONATYPE_USERNAME}</username>
-             <password>${SONATYPE_PASSWORD}</password>
-           </server>
-           <server>
-             <id>central-s01</id>
-                <username>${SONATYPE_USERNAME}</username>
-                <password>${SONATYPE_PASSWORD}</password>
+                <id>central</id>
+                <username>${MAVEN_USERNAME}</username>
+                <password>${MAVEN_PASSWORD}</password>
               </server>
             </servers>
           </settings>
           EOF
 
-          # Deploy to Sonatype
-          mvn deploy -Dmaven.deploy.skip=false \
-          -DskipTests \
-          -Dsonatype.username=$SONATYPE_USERNAME \
-          -Dsonatype.password=$SONATYPE_PASSWORD \
-          -Dgpg.passphrase=$GPG_PASSPHRASE \
-          -Dgpg.executable=gpg \
-          -Dgpg.pinentry-mode=loopback
+          # Publish to Central
+          mvn central:publish
 
       # 8. Perform Maven release
       - name: Release perform
-        env:
-          GPG_TTY: $(tty)
-        run: |
-          mvn release:perform \
-            -Darguments="-Dmaven.deploy.skip=true \
-                         -Dgpg.executable=gpg \
-                         -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} \
-                         -Dgpg.pinentry-mode=loopback"
+        run: mvn release:perform -Darguments="-Dmaven.deploy.skip=true"
