--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,11 +17,6 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-          server-id: central
-          server-username: MAVEN_USERNAME
-          server-password: MAVEN_PASSWORD
-          gpg-private-key: ${{ secrets.GPG_PRIVATE_KEY }}
-          gpg-passphrase: MAVEN_GPG_PASSPHRASE
 
       # 3. Import GPG key
       - name: Import GPG key
@@ -43,9 +38,30 @@ jobs:
           # List imported keys
           gpg --list-secret-keys
 
+          # Find the key ID
+          KEY_ID=$(gpg --list-secret-keys --keyid-format LONG | grep pub | awk '{print $2}' | cut -d/ -f2)
+
       # 4. Build and run tests
       - name: Build with tests
-        run: mvn clean verify
+        env:
+          GPG_TTY: $(tty)
+        run: |
+          mkdir -p ~/.m2
+          cat > ~/.m2/settings.xml << EOF
+          <settings>
+            <servers>
+              <server>
+                <id>gpg.passphrase</id>
+                <passphrase>${{ secrets.GPG_PASSPHRASE }}</passphrase>
+              </server>
+            </servers>
+          </settings>
+          EOF
+          
+          mvn --batch-mode --update-snapshots verify \
+            -Dgpg.executable=gpg \
+            -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} \
+            -Dgpg.pinentry-mode=loopback
 
       # 5. Configure Git for release
       - name: Configure Git user
@@ -55,14 +71,21 @@ jobs:
 
       # 6. Prepare Maven release
       - name: Release prepare
-        run: mvn -B release:prepare
-
-      # 7. Publish to Central
-      - name: Publish to Central
         env:
-          MAVEN_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
-          MAVEN_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
-          MAVEN_GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GPG_TTY: $(tty)
+        run: |
+          mvn -B release:prepare \
+            -Dgpg.executable=gpg \
+            -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} \
+            -Dgpg.pinentry-mode=loopback
+
+      # 7. Deploy to Sonatype
+      - name: Deploy to Sonatype
+        env:
+          SONATYPE_USERNAME: ${{ secrets.SONATYPE_USERNAME }}
+          SONATYPE_PASSWORD: ${{ secrets.SONATYPE_PASSWORD }}
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          GPG_TTY: $(tty)
         run: |
           # Create Maven settings.xml with Sonatype credentials
           mkdir -p ~/.m2
@@ -71,16 +94,34 @@ jobs:
             <servers>
               <server>
                 <id>central</id>
-                <username>${MAVEN_USERNAME}</username>
-                <password>${MAVEN_PASSWORD}</password>
+             <username>${SONATYPE_USERNAME}</username>
+             <password>${SONATYPE_PASSWORD}</password>
+           </server>
+           <server>
+             <id>central-s01</id>
+                <username>${SONATYPE_USERNAME}</username>
+                <password>${SONATYPE_PASSWORD}</password>
               </server>
             </servers>
           </settings>
           EOF
 
-          # Publish to Central
-          mvn central:publish
+          # Deploy to Sonatype
+          mvn deploy -Dmaven.deploy.skip=false \
+          -DskipTests \
+          -Dsonatype.username=$SONATYPE_USERNAME \
+          -Dsonatype.password=$SONATYPE_PASSWORD \
+          -Dgpg.passphrase=$GPG_PASSPHRASE \
+          -Dgpg.executable=gpg \
+          -Dgpg.pinentry-mode=loopback
 
       # 8. Perform Maven release
       - name: Release perform
-        run: mvn release:perform -Darguments="-Dmaven.deploy.skip=true"
+        env:
+          GPG_TTY: $(tty)
+        run: |
+          mvn release:perform \
+            -Darguments="-Dmaven.deploy.skip=true \
+                         -Dgpg.executable=gpg \
+                         -Dgpg.passphrase=${{ secrets.GPG_PASSPHRASE }} \
+                         -Dgpg.pinentry-mode=loopback"
